[package]
name = "turtle-build"
description = "Ninja-compatible build system for high-level programming languages"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/raviqqe/turtle"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = true

[[bin]]
name = "turtle"
path = "src/main.rs"

[dependencies]
async-recursion = "1"
clap = { version = "3", features = ["derive", "env"] }
combine = "4"
fnv = "1"
futures = "0.3"
itertools = "0.10"
num_cpus = "1"
once_cell = "1"
petgraph = "0.6"
regex = "1"
sled = "0.34"
tokio = { "version" = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
