[package]
name = "turtle-build"
description = "Ninja-compatible build system for high-level programming languages"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/raviqqe/turtle"
version = "0.4.5"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = true

[[bin]]
name = "turtle"
path = "src/main.rs"

[dependencies]
async-recursion = "1"
async-trait = "0.1.68"
bincode = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "5.4.0"
futures = "0.3"
itertools = "0.10"
nom = "7.1.3"
num_cpus = "1"
once_cell = "1"
petgraph = "0.6"
rand = "0.8.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
sled = "0.34"
tokio = { "version" = "1", features = ["full"] }
train-map = "0.1.1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
