[package]
name = "turtle-build"
version = "0.4.9"
edition = "2024"
description = "Ninja-compatible build system for high-level programming languages"
repository = "https://github.com/raviqqe/turtle"
license = "MIT OR Apache-2.0"
publish = true

[[bin]]
name = "turtle"
path = "src/main.rs"

[dependencies]
async-recursion = "1"
async-trait = "0.1.89"
bincode = "2"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6.1.0"
futures = "0.3"
itertools = "0.14"
nom = "8.0.0"
num_cpus = "1"
once_cell = "1"
petgraph = "0.8"
rand = "0.9.2"
regex = "1"
sled = "0.34"
tokio = { "version" = "1", features = ["full"] }
train-map = "0.1.2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
